--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,11 @@ spring.h2.console.enabled = true
 
 # ruta de la consola
 spring.h2.console.path = /h2-console
+
+
+jwt.expiration = 800000000000
+
+jwt.secret = ${SECRETKEY}
+
+# Base 64
+# 32 bits
